infra/app-of-apps/headscale/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: headscale
  labels:
    app.kubernetes.io/name: headscale
    app.kubernetes.io/part-of: headscale
